Teasers are no longer truncated. close #4
Always respect :no_partial setting.
Don't retry after a 301 Redirect.
Version 1.2.0

--- a/public/stylesheets/burichan.css
+++ b/public/stylesheets/burichan.css
@@ -22,14 +22,6 @@ code {
   color: #dd0000;
 }
 
-.extended-small .thread {
-  height: 315px;
-}
-
-.extended-large .thread {
-  height: 365px;
-}
-
 #threads {
   padding: 0;
 }
@@ -38,12 +30,11 @@ code {
   background-color: #D6DAF0;
   margin: 5px;
   padding: 8px 0 10px 0;
-  overflow: hidden;
 }
 
 .teaser {
   font-size: 15px;
-  line-height: 17px;
+  line-height: 15px;
   margin-top: 2px;
 }
 
